--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
-language: c
-sudo: false # only for faster build
-script:
- - clang -coverage -00 My_program.c -o My_program
- - ./My_program
- - clang -coverage -00 code-1.c -o code-1
- - ./code-1.c
- - clang -coverage -00 anil1.c -o anil1
- - ./anil1.c
+
+matrix:
+  include:    
+    - language: c  
+      sudo: false # only for faster builds  
+      compiler:
+        - clang
+        - gcc
+      script:  
+        - gcc -o My_program My_program.c 
+        - ./My_program
+        - gcc -o code-1 code-1.c
+        - ./code-1
+        - gcc -o anil1 anil1.c
+        - ./anil1
